--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <p>Email: <a href="mailto:adiatpahla3@gmail.com" class="underline">adiatpahla3@gmail.com</a></p>
       <p>Telepon: 0882003747161</p>
       <div class="mt-6 flex justify-center space-x-6">
-        <a href="https://instagram.com/" target="_blank" class="hover:text-blue-400">Instagram</a>
-        <a href="https://linkedin.com/" target="_blank" class="hover:text-blue-400">LinkedIn</a>
-        <a href="https://github.com/" target="_blank" class="hover:text-blue-400">GitHub</a>
+        <a href="https://www.instagram.com/adiatpahlasaputra?igsh=MXhrc2E4eDV5d2Zudw==" target="_blank" class="hover:text-pink-400 font-semibold">Instagram</a>
+        <a href="https://www.tiktok.com/@orangbiasa0714?_r=1&_d=ek87mcd4jag9k7&sec_uid=MS4wLjABAAAAHKpBfWC5W01wW_TVuBLamoL4bocMqZFJQkPPR3ixx34VOwgFKnD5KvDsjmsSUB0g&share_author_id=7366590399382635525&sharer_language=id&source=h5_t&u_code=ee3a23h4jb8fil&timestamp=1759398774&user_id=7366590399382635525&sec_user_id=MS4wLjABAAAAHKpBfWC5W01wW_TVuBLamoL4bocMqZFJQkPPR3ixx34VOwgFKnD5KvDsjmsSUB0g&item_author_type=1&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7555632871349077776&share_link_id=3fad4725-8d96-4393-9c5c-77ac6126417e&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1" target="_blank" class="hover:text-blue-400 font-semibold">TikTok</a>
+        <a href="https://github.com/adiat686" target="_blank" class="hover:text-gray-400 font-semibold">GitHub</a>
       </div>
     </div>
   </section>
